@@ -190,18 +190,20 @@ def make_predicates(xhr=None, request_method=None, path_info=None,
 
     if match_param is not None:
         if isinstance(match_param, basestring):
-            match_param, match_param_val = match_param.split('=', 1)
-            match_param = {match_param: match_param_val}
-        text = "match_param %s" % match_param
+            match_param = (match_param,)
+        match_param = sorted(match_param)
+        text = "match_param %s" % repr(match_param)
+        reqs = [p.split('=', 1) for p in match_param]
         def match_param_predicate(context, request):
-            for k, v in match_param.iteritems():
+            for k, v in reqs:
                 if request.matchdict.get(k) != v:
                     return False
             return True
         match_param_predicate.__text__ = text
         weights.append(1 << 9)
         predicates.append(match_param_predicate)
-        h.update('match_param:%r' % match_param)
+        for p in match_param:
+            h.update('match_param:%r' % p)
 
     if custom:
         for num, predicate in enumerate(custom):
